# gff_splice_sites_to_vcf

./: CMakeLists.txt
src/: CMakeLists.txt  gff_splice_site_to_vcf.c
